--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="container-fluid">
 <div class="partOne">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-md">
@@ -37,124 +36,117 @@
         <span class="phrase2">I'M LOOKING FOR THINGS I'VE NEVER SEEN BEFORE"</span>
     </div>
 </div>
-</div>
 
-<div class="container-fluid">
-    <div class="partTwo">
-        <div class="titreServices">
-            <p>SERVICES</p>
-        </div>
-        <div class="cardTwo" style="width: 18rem; height: 15rem">
-            <div class="card-bodyTwo">
-                <img class="imageTwo" src="images/coffee.png"width="60"height="70">
-                <h5 class="card-title">COFFEE</h5>
-                <p class="card-text">Apple pie icing sweetApple pie icing sweet. Brownie jelly-o applicake applicake swwet roll liquorice bear claw Jujubes carrot cake cotton candy sweet tart brownie Tiramise applicake jujubes</p>
-            </div>
-        </div>
-        <div class="cardTwo" style="width: 18rem; height: 15rem">
-            <div class="card-bodyTwo">
-                <img class="imageTwo" src="images/dslr.png"width="60"height="70">
-                <h5 class="card-title">INSTANT</h5>
-                <p class="card-text">Apple pie icing sweetApple pie icing sweet. Brownie jelly-o applicake applicake swwet roll liquorice bear claw Jujubes carrot cake cotton candy sweet tart brownie Tiramise applicake jujubes</p>
-            </div>
-        </div>
-        <div class="cardTwo" style="width: 18rem; height: 15rem">
-            <div class="card-bodyTwo">
-                <img class="imageTwo" src="images/frame.png"width="60"height="70">
-                <h5 class="card-title">SERIOUS</h5>
-                <p class="card-text">Apple pie icing sweetApple pie icing sweet. Brownie jelly-o applicake applicake swwet roll liquorice bear claw Jujubes carrot cake cotton candy sweet tart brownie Tiramise applicake jujubes</p>
-            </div>
-        </div>
-        <div class="cardTwo" style="width: 18rem; height: 15rem">
-            <div class="card-bodyTwo">
-                <img class="imageTwo" src="images/frame.png"width="60"height="70">
-                <h5 class="card-title">FRAME</h5>
-                <p class="card-text">Apple pie icing sweetApple pie icing sweet. Brownie jelly-o applicake applicake swwet roll liquorice bear claw Jujubes carrot cake cotton candy sweet tart brownie Tiramise applicake jujubes</p>
-            </div>
-        </div>
 
-    </div>
-</div>
-
-<div class="container-fluid">
-    <div class="partThree">
+<div class="partTwo">
+    <div class="p-3 mb-2 bg-info">
+        <nav class="navbar ">
+            <div class="container-fluid">
+                <a class="navbar-brand fs-2 text-white" >SERVICE</a>
+            </div>
+        </nav>
         <div class="container">
-            <nav class="navbar navbar-expand-lg bg-body">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">PORTFOLIO</a>
-                    <ul class="nav justify-content-end">
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-current="page" href="#">ALL</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#">PANORAMA</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#">PORTRAITS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">MACRO</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">JOURNAL</a>
-                        </li>
-                    </ul>
+            <div class="row align-items-start">
+                <div class="col">
+                    <img src="images/coffee.png"width="45" height="60">
+                    <p class="p-1 fs-3 text-white">COFFEE</p>
+                    <p class="p-1 text-white text-start">Apple pie icing sweetApple pie icing sweet. Brownie jelly-o applicake applicake swwet roll liquorice bear claw Jujubes carrot cake cotton candy sweet tart brownie Tiramise applicake jujubes</p>
                 </div>
-            </nav>
-            <div class="containerPhotoFolio">
-                <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-                    <div class="col">
-                        <div class="cardFolio" style="width: 18rem;">
-                            <img src="images/folio2.png" class="card-img-top" alt="...">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="cardFolio" style="width: 18rem;">
-                            <img src="images/folio2.png" class="card-img-top" alt="...">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="cardFolio" style="width: 18rem;">
-                            <img src="images/folio2.png" class="card-img-top" alt="...">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="cardFolio" style="width: 18rem;">
-                            <img src="images/folio2.png" class="card-img-top" alt="...">
-                        </div>
-                    </div>
+                <div class="col">
+                    <img src="images/coffee.png"width="45" height="60">
+                    <p class="p-1 fs-3 text-white">INSTANT</p>
+                    <p class="p-1 text-white text-start">Apple pie icing sweetApple pie icing sweet. Brownie jelly-o applicake applicake swwet roll liquorice bear claw Jujubes carrot cake cotton candy sweet tart brownie Tiramise applicake jujubes</p>
                 </div>
-                <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-                    <div class="col">
-                        <div class="cardFolio" style="width: 18rem;">
-                            <img src="images/folio2.png" class="card-img-top" alt="...">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="cardFolio" style="width: 18rem;">
-                            <img src="images/folio2.png" class="card-img-top" alt="...">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="cardFolio" style="width: 18rem;">
-                            <img src="images/folio2.png" class="card-img-top" alt="...">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="cardFolio" style="width: 18rem;">
-                            <img src="images/folio2.png" class="card-img-top" alt="...">
-                        </div>
-                    </div>
-                    </div>
+                <div class="col">
+                    <img src="images/coffee.png"width="45" height="60">
+                    <p class="p-1 fs-3 text-white">SERIOUS</p>
+                    <p class="p-1 text-white text-start">Apple pie icing sweetApple pie icing sweet. Brownie jelly-o applicake applicake swwet roll liquorice bear claw Jujubes carrot cake cotton candy sweet tart brownie Tiramise applicake jujubes</p>
+                </div>
+                <div class="col">
+                    <img src="images/coffee.png"width="45" height="60">
+                    <p class="p-1 fs-3 text-white">FRAME</p>
+                    <p class="p-1 text-white text-start">Apple pie icing sweetApple pie icing sweet. Brownie jelly-o applicake applicake swwet roll liquorice bear claw Jujubes carrot cake cotton candy sweet tart brownie Tiramise applicake jujubes</p>
+                </div>
+
             </div>
         </div>
 
-
-<!-- test32424-->
-
-
     </div>
 </div>
+
+<div class="partThree">
+    <div class="container">
+        <nav class="navbar ">
+            <div class="container-fluid">
+                <a class="navbar-brand fs-2 text-black">PORTFOLIO</a>
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link disabled text-black border border-info border-5">ALL</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled text-black" href="#">PANORAMA</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled text-black" href="#">PORTRAITS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled text-black" aria-disabled="true">MACRO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled text-black" aria-disabled="true">JOURNAL</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div class="row mx-5">
+        <div class="col-md-3 mb-3">
+            <img src="images/folio2.png"width="280"height="180" class="img-fluid rounded">
+        </div>
+        <div class="col-md-3 mb-3">
+            <img src="images/folio2.png" width="280"height="180"class="img-fluid rounded">
+        </div>
+        <div class="col-md-3 mb-3">
+            <img src="images/folio2.png"width="280"height="180" class="img-fluid rounded">
+        </div>
+        <div class="col-md-3 mb-3">
+            <img src="images/folio2.png" width="280"height="180" class="img-fluid rounded">
+        </div>
+        <div class="col-md-3 mb-3">
+            <img src="images/folio2.png"width="280"height="180"  class="img-fluid rounded">
+        </div>
+        <div class="col-md-3 mb-3">
+            <img src="images/folio2.png" width="280"height="180" class="img-fluid rounded">
+        </div>
+        <div class="col-md-3 mb-3">
+            <img src="images/folio2.png"width="280"height="180"  class="img-fluid rounded">
+        </div>
+        <div class="col-md-3 mb-3">
+            <img src="images/folio2.png" width="280"height="180" class="img-fluid rounded">
+        </div>
+    </div>
+</div>
+
+<div class="partFour">
+    <div class="container">
+        <nav class="navbar">
+            <div class="container-fluid">
+                <a class="navbar-brand fs-2 text-white" >JUST DEFAULT SECTION</a>
+            </div>
+        </nav>
+    </div>
+    <div class="row">
+        <p class="p-2 text-white text-center text-fluid">Apple pie icing sweetApple pie icing sweet. Brownie jelly-o applicake applicake swwet roll liquorice bear claw Jujubes carrot cake cotton candy sweet tart brownie Tiramise applicake jujubes</p>
+    </div>
+
+
+
+
+</div>
+
+
+
+
 
 
 
