--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <div class="partTwo">
     <div class="p-3 mb-2 bg-info">
         <nav class="navbar ">
-            <div class="container-fluid">
-                <a class="navbar-brand fs-2 text-white" >SERVICE</a>
+            <div class="container">
+                <a class="navbar-brand fs-2 text-white p-3" >SERVICE</a>
             </div>
         </nav>
         <div class="container">
@@ -75,10 +75,10 @@
 </div>
 
 <div class="partThree">
-    <div class="container">
+
         <nav class="navbar ">
-            <div class="container-fluid">
-                <a class="navbar-brand fs-2 text-black">PORTFOLIO</a>
+            <div class="container">
+                <a class="navbar-brand fs-2 text-black p-3">PORTFOLIO</a>
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link disabled text-black border border-info border-5">ALL</a>
@@ -98,7 +98,7 @@
                 </ul>
             </div>
         </nav>
-    </div>
+
     <div class="row mx-5">
         <div class="col-md-3 mb-3">
             <img src="images/folio2.png"width="280"height="180" class="img-fluid rounded">
@@ -131,19 +131,60 @@
     <div class="container">
         <nav class="navbar">
             <div class="container-fluid">
-                <a class="navbar-brand fs-2 text-white" >JUST DEFAULT SECTION</a>
+                <a class="navbar-brand fs-2 text-white p-3" >JUST DEFAULT SECTION</a>
             </div>
         </nav>
     </div>
-    <div class="row">
-        <p class="p-2 text-white text-center text-fluid">Apple pie icing sweetApple pie icing sweet. Brownie jelly-o applicake applicake swwet roll liquorice bear claw Jujubes carrot cake cotton candy sweet tart brownie Tiramise applicake jujubes</p>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                    <p class="p-3 text-white text-start text-fluid ">Bear claw marzpian bear claw applicake I love muffin.Lemondrops gummi bears pasrtry gummi bears sesame snaps I love underwear.com. Souffle cotton candy dessert candyice cream water gummies chessecake.
+                        Muffin chupa chups jelly beans sweet pie applicake croissant chocolat cake i love pudding ice cream i love powder pudding apple pie mashmallow cupcake marzipian oat cake bonbon i love candy canes toffe.marzipian oat cake bonbon i love candy canes toffe</p>
+                <div class="d-grid gap-2 d-md-block">
+                    <button class="btn btn-outline-black border border-black border-5" type="button">VISIT ME</button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <iframe src="https://www.youtube.com/watch?v=Yys43tMxMoc"width="100%"height="380"></iframe>
+            </div>
+        </div>
     </div>
+</div>
+
+
+
+<div class="partFive">
+    <div class="container-fluid ">
+        <nav class="navbar-brand fs-2 text-white p-3">
+            <div class="container-fluid">
+                <a class="navbar-brand mx-5">TWITTER</a>
+                <div class="text-end mb-5">
+                    <img src="images/twitter.png">
+                </div>
+            </div>
+        </nav>
+        <div class="text mx-5">
+            <p class="text-white fs-5"> Underwear cookie liquorice. cake donut cupcake lollipop souffle candy chocolat . chocolat aot cake </p>
+            <strong class="text-white fs-5"> @Cheesecake</strong>
+        </div>
+        
+    </div>
+
+
+
+
+
+
+
+
+
+
 
 
 
 
 </div>
-
 
 
 
