--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 <div class="partFive">
     <div class="container-fluid ">
-        <nav class="navbar-brand fs-2 text-white p-3">
+        <nav class="navbar-brand fs-2 text-white ">
             <div class="container-fluid">
                 <a class="navbar-brand mx-5">TWITTER</a>
                 <div class="text-end mb-5">
@@ -170,20 +170,30 @@
         </div>
         
     </div>
+</div>
 
+<div class="partSix ">
+        <nav class="navbar">
+            <div class="container">
+                <a class="navbar-brand" href="#">WHO IS JOHN DOE?</a>
+            </div>
+        </nav>
+    <div class="container my-5 py-4 d-flex align-item-center  ">
+        <div class="row mt-4 d-flex justify-content-space-around fs-6 ">
+            <div class="col-md-5  ">
+                <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liqurorice bear claw. Jujube carrot cake cotton candy sweet tart brownie.</br> Tiramiqu applicake jujubes.</p>
+                <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll</br>liqurorice bear claw. Jujube carrot cake cotton candy sweet tart brownie.</br> Tiramiqu applicake jujubes.</p>
+            </div>
+            <div class="col-md-5">
+                <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll</br>liqurorice bear claw. Jujube carrot cake cotton candy sweet tart brownie.</br> Tiramiqu applicake jujubes.</p>
+                <img src="images/twitter2.png" width="70" height="70">
+                <img src="images/googleplus.png" width="70" height="70">
+                <img src="images/dribble.png" width="70" height="70">
+                <img src="images/coffee2.png" width="70" height="70">
+            </div>
+        </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
+     </div>
 </div>
 
 
