--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 <div class="partFive">
     <div class="container-fluid ">
-        <nav class="navbar-brand fs-2 text-white ">
+        <nav class="navbar-brand my-5 fs-2 text-white ">
             <div class="container-fluid">
                 <a class="navbar-brand mx-5">TWITTER</a>
                 <div class="text-end mb-5">
@@ -175,7 +175,7 @@
 <div class="partSix ">
         <nav class="navbar">
             <div class="container">
-                <a class="navbar-brand" href="#">WHO IS JOHN DOE?</a>
+                <a class="navbar-brand mx-5 fs-2 text-white" href="#">WHO IS JOHN DOE?</a>
             </div>
         </nav>
     <div class="container my-5 py-4 d-flex align-item-center  ">
@@ -192,9 +192,66 @@
                 <img src="images/coffee2.png" width="70" height="70">
             </div>
         </div>
-
      </div>
 </div>
+
+<div class="partSeven">
+    <div class="container-fluid ">
+        <nav class="navbar-brand my-5 fs-2 text-black ">
+            <div class="container-fluid">
+                <a class="navbar-brand mx-5">TERSTIMONIAL</a>
+                <div class="text-end mb-5">
+                    <img class="" src="images/guillemets.png ">
+                </div>
+            </div>
+        </nav>
+        <div class="text mx-5">
+            <p class="text-black fs-5">Applicake chocolate cake water toffee pie soufflé wafer. tart marshmallow wafer macaroon cheesecake jelly.</br>gingerbread cookie sweet roll jelly-o </p>
+            <strong class="text-primary fs-5">-Walter white</strong>
+        </div>
+</div>
+
+
+<div class="partEight">
+    <div class="container">
+    <nav class="navbar">
+        <div class="container text-white">
+            <a class="navbar-brand mx-5 fs-2 text-white" href="#">CONTACT</a>
+        </div>
+    </nav>
+    </div>
+
+    <div class="container">
+        <div class="row align-items-start">
+            <div class="col">
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+                </div>
+            </div>
+            <div class="col">
+                <div class="text mx-5 text-start">
+                    <p class="text-black fs-5">Applicake chocolate cake water toffee pie soufflé wafer. tart marshmallow wafer macaroon cheesecake jelly.</br>gingerbread cookie sweet roll jelly-o </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+
+</div>
+
+
+
+
+
+
+
 
 
 
